--- a/CinemaPro/package.json
+++ b/CinemaPro/package.json
@@ -18,7 +18,9 @@
     "i18n": "^0.15.3",
     "i18n-js": "^4.5.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
