--- a/CinemaPro/package.json
+++ b/CinemaPro/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.8.5",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/native-stack": "^7.6.3",
+    "@reduxjs/toolkit": "^2.10.1",
     "expo": "~54.0.25",
     "expo-status-bar": "~3.0.8",
     "i18n": "^0.15.3",
@@ -20,7 +21,8 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
